2024-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-convert-file-attributes): Don't cache
	"file-attributes-ID-FORMAT".

	* tramp-adb.el (tramp-adb-maybe-open-connection): Move setting of
	sentinel up.

	* tramp-cache.el (tramp-get-connection-property)
	(tramp-set-connection-property): Don't raise a debug message for
	the `tramp-cache-version' key.

2024-10-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el:
	* tramp-androidsu.el:
	* tramp-cache.el:
	* tramp-cmds.el:
	* tramp-compat.el:
	* tramp-container.el:
	* tramp-crypt.el:
	* tramp-ftp.el:
	* tramp-fuse.el:
	* tramp-gvfs.el:
	* tramp-integration.el:
	* tramp-message.el:
	* tramp-rclone.el:
	* tramp-sh.el:
	* tramp-smb.el:
	* tramp-sshfs.el:
	* tramp-sudoedit.el:
	* tramp.el: Use `when-let*', `if-let*' and `and-let*'
	consequently.  (Bug#73441)

2024-10-26  Eyal Soha  <eyalsoha@gmail.com>  (tiny change)

	* tramp-sh.el (tramp-vc-file-name-handler):
	Add `file-directory-p', which is used in
	`vc-find-root'.  (Bug#74026)

2024-10-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-regexp):
	* tramp-message.el (tramp-error-with-buffer, tramp-user-error):
	Don't redisplay in `sit-for'.  (Bug#73718)

2024-10-03  Stefan Kangas  <stefankangas@gmail.com>

	* tramp.el (tramp-temp-buffer-file-name): Prefer defvar-local
	where possible, and the package does not support Emacs 24.3 or
	earlier.

2024-09-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Adapt `tramp-verbose' when
	completing host names.

	* tramp-integration.el (tramp-syntax): Declare.
	(shortdoc): Check, that Tramp has `default' syntax.

2024-09-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-otp-password-prompt-regexp): Add TACC HPC prompt.

2024-09-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wait-for-regexp): Use (sit-for 0) in order to
	avoid performace regression.

2024-09-10  Michael Albinus  <michael.albinus@gmx.de>
